Fix light theme flashing + fix for games with custom dark mode

--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -2,6 +2,11 @@
   color-scheme: dark;
 }
 
+/* seems to not be used, and cause a white flash */
+#topbar.newbgastyle {
+  display: none;
+}
+
 .bg-white {
   background-color: var(--dark-back);
 }
